<resources>
    <string name="app_name">Omnia Tap</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Profile</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_saved_addresses">SavedAddressesActivity</string>

    <string name="facebook_app_id">983257798481890</string>
    <string name="fb_login_protocol_scheme">fb983257798481890</string>
    <string name="no_internet_message">No Internet, Make Sure You Are Connected</string>
    <string name="facebook_button_text">Facebook</string>
    <string name="verify_button_text">Verify</string>
    <string name="successful_payment_message">Is Successful</string>
    <string name="thank_you_subscription_message">Thank You For Subscribing. Go To Water Can Tab In Home Page To Order A Can</string>
    <string name="failed_payment_subscription_message">Has Failed</string>
    <string name="take_screenshot_message">Please Take A Screen Shot Of This And, Contact Our Customer Care</string>
    <string name="one_month_total_cans">10</string>
    <string name="three_months_total_cans">30</string>
    <string name="six_months_total_cans">60</string>
    <string name="three_months_subscription_amount">1050/-</string>
    <string name="delivery_charges_amount">Free</string>
    <string name="six_months_subscription_amount">2100/-</string>
    <string name="one_months_subscription_amount">370/-</string>
    <string name="address_header_text">Address</string>
    <string name="service_type_laundry">Service Type</string>
    <string name="price_laundry">Price</string>
    <string name="per_kg_60_laundry">Per kg 60/-</string>
    <string name="basic_information_laundry">BASIC INFORMATION</string>
    <string name="no_of_shirts_laundry">NO OF SHIRTS :</string>
    <string name="example_3_laundry_hint">Example : 3</string>
    <string name="no_of_trousers_laundry">NO OF TROUSERS :</string>
    <string name="example_2_laundry_hint">Example : 2</string>
    <string name="others_laundry">OTHERS :</string>
    <string name="example_0_laundry_hint">Example : 0</string>
    <string name="place_order_laundry_button">Place Order</string>
    <string name="service_type_water">Service Type</string>
    <string name="price_water_text">Price</string>
    <string name="per_can_40_water_text">Per Can 40/-</string>
    <string name="basic_information_water_text">BASIC INFORMATION</string>
    <string name="number_of_can_cans_water">Number Of Can/Cans :</string>
    <string name="example_3_water_hint">Example : 3</string>
    <string name="place_orderwater_button">Place Order</string>
    <string name="service_type_subscription">Service Type</string>
    <string name="price_details_subscription">PRICE DETAILS</string>
    <string name="price_subscription_text">Price</string>
    <string name="delivery_subscription_text">Delivery</string>
    <string name="free_delivery_charges">Free</string>
    <string name="amount_payable_subscription">Amount Payable :</string>
    <string name="proceed_to_payment_subscription_button">Proceed To Payment</string>
    <string name="this_service_will_be_coming_soon_text">This Service Will Be Coming Soon!!!!</string>
    <string name="company_logo">Company Logo</string>
    <string name="phone_number_auto_complete_text_view">Phone Number</string>
    <string name="enter_otp_edit_text">Enter OTP</string>
    <string name="resend_option">Resend?</string>
    <string name="login_button_text">Login</string>
    <string name="sad_emoji_image">sad emoji</string>
    <string name="payment_of_text">Payment of</string>
    <string name="for_text">For</string>
    <string name="order_1_water_can_button_text">Order 1 Water Can</string>
    <string name="or_text">OR</string>
    <string name="take_subscription_text">Take Subscription!!</string>
    <string name="description_subscription_text">Order Once and Leave The Delivery To Us</string>
    <string name="one_month_overview">1 month : 10 cans :- 370/-</string>
    <string name="three_months_overview">3 months : 30 cans :- 1050/-</string>
    <string name="six_months_overview">6 months : 60 cans :- 2100/-</string>
    <string name="full_name_edit_text">Full Name</string>
    <string name="mobile_number_edit_text">Mobile Number</string>
    <string name="e_mail_address_edit_text">E-mail Address</string>
    <string name="flat_house_no_building_edit_text">Flat / House No. / Building</string>
    <string name="colony_locality_edit_text">Colony / Locality</string>
    <string name="nearest_landmark_edit_text">Nearest Landmark</string>
    <string name="your_subscription_has_ended">Your Subscription Has Ended.</string>
    <string name="but_don_t_worry_text">But Don\'t Worry</string>
    <string name="wink_emoji">wink emoji</string>
    <string name="subscribe_again_to_enjoy_the_benifits">Subscribe Again To Enjoy The Benifits</string>
    <string name="profile_picture_description">profile picture</string>
    <string name="profile_name_text">Profile Name</string>
    <string name="your_orders_text">Your Orders</string>
    <string name="saved_addresses_text">Saved Addresses</string>
    <string name="notifications_text">Notifications</string>
    <string name="customer_care_text">Customer Care</string>
    <string name="rate_us_text">Rate Us</string>
    <string name="log_out_text">Log Out</string>
    <string name="order_id_text">Order ID :</string>
    <string name="order_date_text">Order Date :</string>
    <string name="address_text">Address :</string>
    <string name="mobile_number_text">Mobile Number :</string>
    <string name="service_type_text">Service Type :</string>
    <string name="total_garments_text">Total Garments :</string>
    <string name="name_item_text">Name</string>
    <string name="address_item_text">Address</string>
    <string name="number_item_text">Number</string>
    <string name="edit_address_item_text">edit address</string>
    <string name="thanks_for_subscribing">Thanks For Subscribing..!!</string>
    <string name="click_this_button_whenever_you_need_a_water_can">Click This Button Whenever You Need A Water Can</string>
    <string name="i_want_water_can">I want Water Can!!</string>
    <string name="current_cans_number">0</string>
    <string name="slash">/</string>
    <string name="total_cans_number">10</string>
    <string name="cans_text">Cans</string>
    <string name="e_mail_orders_text">E-mail</string>
    <string name="notification_heading">Heading</string>
    <string name="notification_body">Body</string>
</resources>
