<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:components="http://schemas.android.com/apk/in.desireplace.waytogo.extras"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <in.desireplace.waytogo.extras.GifView
        android:id="@+id/gif_view"
        android:layout_width="254dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        components:src="@raw/congrats"/>

    <TextView
        android:id="@+id/thanks_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/gif_view"
        android:layout_marginBottom="26dp"
        android:layout_marginTop="30dp"
        android:text="@string/thanks_for_subscribing"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/info_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/thanks_text_view"
        android:text="@string/click_this_button_whenever_you_need_a_water_can"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/want_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/info_text_view"
        android:layout_marginTop="67dp"
        android:background="@color/colorAccent"
        android:padding="16dp"
        android:text="@string/i_want_water_can"
        android:textColor="#fff" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/present_cans_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_cans_number"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slash"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/total_cans_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_cans_number"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cans_text"
            android:textSize="22sp"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>
