<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ImageView
        android:id="@+id/sad_emoji_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/sad_emoji_image"
        android:src="@drawable/sad_emoji" />

    <TextView
        android:id="@+id/ended_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sad_emoji_text_view"
        android:layout_marginBottom="10dp"
        android:text="@string/your_subscription_has_ended"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="18sp"/>

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ended_text_view"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dont_worry_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:text="@string/but_don_t_worry_text"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dont_worry_text_view"
            android:contentDescription="@string/wink_emoji"
            android:src="@drawable/wink_emoji" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/subscribe_again_to_enjoy_the_benifits"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"/>

</RelativeLayout>