<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="in.desireplace.waytogo.activities.WaterSupplyActivity">

    <LinearLayout
        android:id="@+id/ConcernedPortionofScreen"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="25dp"
                android:background="#b2ebf2">

                <Button
                    android:id="@+id/water_order_once_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@color/colorAccent"
                    android:padding="32dp"
                    android:text="@string/order_1_water_can_button_text"
                    android:textColor="#fff" />

                </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/or_text"
                android:textSize="16sp"/>
        </FrameLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/RestofScreen"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:text="@string/take_subscription_text"
                android:textColor="#000"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/description_subscription_text"
                android:textSize="16sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <Button
                    android:id="@+id/one_month_subscription_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorAccent"
                    android:padding="24dp"
                    android:text="@string/one_month_overview"
                    android:textColor="#fff"/>

                <Button
                    android:id="@+id/three_months_subscription_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorAccent"
                    android:padding="24dp"
                    android:text="@string/three_months_overview"
                    android:textColor="#fff"/>

                <Button
                    android:id="@+id/six_months_subscription_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorAccent"
                    android:padding="24dp"
                    android:text="@string/six_months_overview"
                    android:textColor="#fff"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>