<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/fragment_login_title"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/company_logo"
        android:src="@drawable/omniatap_home" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/phone_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/phone_number_auto_complete_text_view"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:shadowColor="#000"
            android:textColor="#000"
            android:textColorHighlight="#000"
            android:textColorHint="#000"
            android:textColorLink="#000" />

        <EditText
            android:id="@+id/code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_otp_edit_text"
            android:imeActionLabel="Login"
            android:imeOptions="actionUnspecified"
            android:inputType="number"
            android:maxLines="1"
            android:shadowColor="#000"
            android:textColor="#000"
            android:textColorHighlight="#000"
            android:textColorHint="#000"
            android:textColorLink="#000"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/resend_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/resend_option"
            android:textColor="@color/colorPrimary"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/log_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login_button_text"
            android:textColor="#fff"
            android:textStyle="bold" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:textAlignment="center" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:paddingBottom="15dp"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingTop="15dp" />

    </LinearLayout>

</LinearLayout>
